# rockchip-linux-external-camera_engine_rkaiq

./: .gitignore  CMakeLists.txt
media_enquiry/: CMakeLists.txt
rk_stream/: CMakeLists.txt
rkaiq/algos/: Android.bp  CMakeLists.txt
rkaiq/algos/a3dlut/: rk_aiq_a3dlut_algo.cpp  rk_aiq_algo_a3dlut_itf.cpp  rk_aiq_types_a3dlut_algo_prvt.h
rkaiq/algos/abayer2dnr2/: rk_aiq_abayer2dnr_algo_bayernr_v2.cpp  rk_aiq_abayer2dnr_algo_bayernr_v2.h  rk_aiq_abayer2dnr_algo_itf_v2.cpp  rk_aiq_abayer2dnr_algo_v2.cpp  rk_aiq_types_abayer2dnr_algo_prvt_v2.h
rkaiq/algos/abayer2dnrV23/: rk_aiq_abayer2dnr_algo_bayernr_v23.cpp  rk_aiq_abayer2dnr_algo_bayernr_v23.h  rk_aiq_abayer2dnr_algo_itf_v23.cpp  rk_aiq_abayer2dnr_algo_v23.cpp  rk_aiq_types_abayer2dnr_algo_prvt_v23.h  rk_aiq_uapi_abayer2dnr_int_v23.cpp
rkaiq/algos/abayertnr2/: rk_aiq_abayertnr_algo_bayertnr_v2.cpp  rk_aiq_abayertnr_algo_bayertnr_v2.h  rk_aiq_abayertnr_algo_itf_v2.cpp  rk_aiq_abayertnr_algo_v2.cpp  rk_aiq_types_abayertnr_algo_prvt_v2.h
rkaiq/algos/abayertnrV23/: rk_aiq_abayertnr_algo_bayertnr_v23.cpp  rk_aiq_abayertnr_algo_bayertnr_v23.h  rk_aiq_abayertnr_algo_itf_v23.cpp  rk_aiq_abayertnr_algo_v23.cpp  rk_aiq_types_abayertnr_algo_prvt_v23.h  rk_aiq_uapi_abayertnr_int_v23.cpp
rkaiq/algos/ablc/: rk_aiq_algo_ablc_itf.cpp
rkaiq/algos/ablcV32/: rk_aiq_ablc_algo_itf_v32.cpp  rk_aiq_ablc_algo_v32.cpp  rk_aiq_ablc_algo_v32.h  rk_aiq_types_ablc_algo_prvt_v32.h  rk_aiq_uapi_ablc_int_v32.cpp
rkaiq/algos/acac/: cac_adaptor.cpp  cac_adaptor.h  lut_buffer.h  rk_aiq_algo_acac_itf.cpp
rkaiq/algos/accm/: CMakeLists.txt  rk_aiq_accm_algo_com.cpp  rk_aiq_accm_algo_com.h  rk_aiq_accm_algo_v1.cpp  rk_aiq_accm_algo_v1.h  rk_aiq_accm_algo_v2.cpp  rk_aiq_algo_accm_itf.cpp  rk_aiq_types_accm_algo_prvt.h  rk_aiq_uapi_accm_int.cpp
rkaiq/algos/acgc/: rk_aiq_algo_acgc_itf.cpp
rkaiq/algos/acnr/: rk_aiq_acnr_algo_itf_v1.cpp
rkaiq/algos/acnr2/: rk_aiq_acnr_algo_cnr_v2.cpp  rk_aiq_acnr_algo_itf_v2.cpp
rkaiq/algos/acnrV30/: rk_aiq_acnr_algo_cnr_v30.cpp  rk_aiq_acnr_algo_cnr_v30.h  rk_aiq_acnr_algo_itf_v30.cpp  rk_aiq_acnr_algo_v30.cpp  rk_aiq_types_acnr_algo_prvt_v30.h  rk_aiq_uapi_acnr_int_v30.cpp
rkaiq/algos/acp/: rk_aiq_algo_acp_itf.cpp
rkaiq/algos/acsm/: rk_aiq_algo_acsm_itf.cpp
rkaiq/algos/adebayer/: rk_aiq_adebayer_algo_v1.cpp  rk_aiq_adebayer_algo_v1.h  rk_aiq_adebayer_algo_v2.cpp  rk_aiq_adebayer_algo_v2.h  rk_aiq_algo_adebayer_itf.cpp  rk_aiq_types_adebayer_algo_prvt.h  rk_aiq_uapi_adebayer_int.cpp
rkaiq/algos/adegamma/: rk_aiq_algo_adegamma_itf.cpp
rkaiq/algos/adehaze/: CMakeLists.txt  rk_aiq_adehaze_algo_v1.cpp  rk_aiq_adehaze_algo_v10.cpp  rk_aiq_adehaze_algo_v10.h  rk_aiq_adehaze_algo_v11.cpp  rk_aiq_adehaze_algo_v11.h  rk_aiq_adehaze_algo_v11_duo.cpp  rk_aiq_adehaze_algo_v11_duo.h  rk_aiq_adehaze_algo_v12.cpp  rk_aiq_adehaze_algo_v12.h  rk_aiq_adehaze_algo_v2.cpp  rk_aiq_adehaze_algo_v2.h  rk_aiq_adehaze_algo_v3.cpp  rk_aiq_algo_adehaze_itf.cpp  rk_aiq_algo_adhaz_itf.cpp  rk_aiq_types_adehaze_algo_prvt.h  rk_aiq_uapi_adehaze_int.cpp
rkaiq/algos/adpcc/: rk_aiq_adpcc_algo.cpp  rk_aiq_algo_adpcc_itf.cpp
rkaiq/algos/adrc/: CMakeLists.txt  rk_aiq_adrc_algo_v1.cpp  rk_aiq_adrc_algo_v1.h  rk_aiq_adrc_algo_v10.cpp  rk_aiq_adrc_algo_v10.h  rk_aiq_adrc_algo_v11.cpp  rk_aiq_adrc_algo_v11.h  rk_aiq_adrc_algo_v12.cpp  rk_aiq_adrc_algo_v12.h  rk_aiq_adrc_algo_v2.cpp  rk_aiq_algo_adrc_itf.cpp  rk_aiq_types_adrc_algo_prvt.h  rk_aiq_uapi_adrc_int.cpp
rkaiq/algos/ae/: CMakeLists.txt
rkaiq/algos/aeis/: remap_backend.cpp
rkaiq/algos/af/: CMakeLists.txt
rkaiq/algos/afec/: rk_aiq_algo_afec_itf.cpp
rkaiq/algos/again2/: CMakeLists.txt  rk_aiq_again_algo_gain_v2.cpp  rk_aiq_again_algo_itf_v2.cpp  rk_aiq_again_algo_v2.cpp  rk_aiq_uapi_again_int_v2.cpp
rkaiq/algos/agamma/: CMakeLists.txt  rk_aiq_agamma_algo_v1.cpp  rk_aiq_agamma_algo_v10.cpp  rk_aiq_agamma_algo_v10.h  rk_aiq_agamma_algo_v11.cpp  rk_aiq_agamma_algo_v11.h  rk_aiq_agamma_algo_v2.cpp  rk_aiq_algo_agamma_itf.cpp  rk_aiq_types_agamma_algo_prvt.h  rk_aiq_uapi_agamma_int.cpp
rkaiq/algos/agic/: rk_aiq_algo_agic_itf.cpp  rk_aiq_algo_agic_v1.cpp  rk_aiq_algo_agic_v2.cpp
rkaiq/algos/aie/: rk_aiq_algo_aie_itf.cpp
rkaiq/algos/aldch/: CMakeLists.txt  rk_aiq_algo_aldch_itf.cpp  rk_aiq_algo_aldch_v21_itf.cpp  rk_aiq_ldch_generate_mesh.cpp  rk_aiq_ldch_generate_mesh.h  rk_aiq_types_aldch_algo_prvt.h  rk_aiq_uapi_aldch_v21_int.cpp
rkaiq/algos/alsc/: rk_aiq_algo_alsc_itf.cpp  rk_aiq_alsc_algo.cpp  rk_aiq_alsc_algo_v1.cpp  rk_aiq_types_alsc_algo_prvt.h
rkaiq/algos/amerge/: CMakeLists.txt  rk_aiq_algo_amerge_itf.cpp  rk_aiq_amerge_algo_v1.cpp  rk_aiq_amerge_algo_v1.h  rk_aiq_amerge_algo_v10.cpp  rk_aiq_amerge_algo_v10.h  rk_aiq_amerge_algo_v11.cpp  rk_aiq_amerge_algo_v11.h  rk_aiq_amerge_algo_v12.cpp  rk_aiq_amerge_algo_v12.h  rk_aiq_amerge_algo_v2.cpp  rk_aiq_types_amerge_algo_prvt.h  rk_aiq_uapi_amerge_int.cpp
rkaiq/algos/anr/: rk_aiq_anr_algo_bayernr.cpp
rkaiq/algos/aorb/: orb_algos.cpp
rkaiq/algos/arawnr2/: rk_aiq_abayernr_algo_itf_v2.cpp
rkaiq/algos/asharp3/: rk_aiq_asharp_algo_itf_v3.cpp
rkaiq/algos/asharp4/: rk_aiq_asharp_algo_itf_v4.cpp  rk_aiq_asharp_algo_sharp_v4.cpp
rkaiq/algos/asharpV33/: CMakeLists.txt  rk_aiq_asharp_algo_itf_v33.cpp  rk_aiq_asharp_algo_sharp_v33.cpp  rk_aiq_asharp_algo_sharp_v33.h  rk_aiq_asharp_algo_v33.cpp  rk_aiq_types_asharp_algo_prvt_v33.h  rk_aiq_uapi_asharp_int_v33.cpp
rkaiq/algos/atmo/: rk_aiq_atmo_algo.cpp
rkaiq/algos/awb/: CMakeLists.txt
rkaiq/algos/awdr/: rk_aiq_algo_awdr_itf.cpp
rkaiq/algos/aynr2/: CMakeLists.txt  rk_aiq_aynr_algo_itf_v2.cpp  rk_aiq_aynr_algo_ynr_v2.cpp
rkaiq/algos/aynr3/: rk_aiq_aynr_algo_itf_v3.cpp  rk_aiq_aynr_algo_ynr_v3.cpp
rkaiq/algos/aynrV22/: rk_aiq_aynr_algo_itf_v22.cpp  rk_aiq_aynr_algo_v22.cpp  rk_aiq_aynr_algo_ynr_v22.cpp  rk_aiq_aynr_algo_ynr_v22.h  rk_aiq_types_aynr_algo_prvt_v22.h  rk_aiq_uapi_aynr_int_v22.cpp
rkaiq/tools/j2s4b/: CMakeLists.txt  build.sh
rkaiq/tools/j2s4b/src/: main.cpp
rkaiq/tools/j2s4b/src/j2s4b/: BinRecord.cpp  j2s.cpp  j2s.h  j2s4b_utils.cpp
(+525 files in other folders)
