if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release CACHE STRING
        "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel."
        FORCE)
endif()

cmake_minimum_required(VERSION 2.8)

# surpress CXX_VISIBILITY_PRESET warning
cmake_policy(SET CMP0063 NEW)

include_directories(
    ../xcore
    ../xcore/base
    ./
    )

if(WIN32)
    set(PREFIX )
    set(SUFFIX lib)
else()
    set(PREFIX ${LIBRARY_OUTPUT_PATH}/lib)
    set(SUFFIX a)
endif()

macro(dec_algo_v name version chk_file src_list)
    set(_src_list ${src_list} ${ARGN} )
    if (${version} EQUAL 0)
        set(target_name "rkaiq_${name}")
        set(target_folder "algos/${name}")
    else()
        set(target_name "rkaiq_${name}_v${version}")
        set(target_folder "algos/${name}${version}")
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${chk_file}")
        add_library(${target_name} STATIC ${_src_list})
        set_target_properties(${target_name} PROPERTIES FOLDER "${target_folder}")
        set_target_properties(${target_name} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
        set_target_properties(${target_name} PROPERTIES C_VISIBILITY_PRESET default)
        set_target_properties(${target_name} PROPERTIES CXX_VISIBILITY_PRESET default)
    else()
        message(STATUS "Can NOT found ${CMAKE_CURRENT_SOURCE_DIR}/${chk_file}. Using lib")
        string(TOLOWER ${CMAKE_SYSTEM_NAME} OS)
        set(PREFIX "${CMAKE_CURRENT_LIST_DIR}/${OS}/${ARCH}/lib")
        add_library(${target_name} STATIC IMPORTED GLOBAL)
        set_target_properties(${target_name} PROPERTIES IMPORTED_LOCATION
            "${PREFIX}${target_name}.${SUFFIX}")
        set_target_properties(${target_name} PROPERTIES IMPORTED_IMPLIB
            "${PREFIX}${target_name}.${SUFFIX}")
    endif()
endmacro(dec_algo_v)

macro(dec_algo name chk_file src_list)
    set(_src_list ${src_list} ${ARGN})
    dec_algo_v(${name} 0 ${chk_file} ${_src_list})
endmacro(dec_algo)

add_subdirectory(ae)
add_subdirectory(awb)
if (RKAIQ_HAVE_AF_V20 OR RKAIQ_HAVE_AF_V30 OR RKAIQ_HAVE_AF_V31)
add_subdirectory(af)
endif()
add_subdirectory(aie)
if (RKAIQ_HAVE_MERGE_V1 OR RKAIQ_HAVE_MERGE_V2)
add_subdirectory(amerge)
endif()
if (RKAIQ_HAVE_TMO_V1)
add_subdirectory(atmo)
endif()
if (RKAIQ_HAVE_DRC_V1 OR RKAIQ_HAVE_DRC_V2)
add_subdirectory(adrc)
endif()
if (RKAIQ_HAVE_ANR_V1)
add_subdirectory(anr)
endif()
if (RKAIQ_HAVE_SHARP_V1)
add_subdirectory(asharp)
endif()
add_subdirectory(asd)
add_subdirectory(acp)
if (RKAIQ_HAVE_DEHAZE_V1 OR RKAIQ_HAVE_DEHAZE_V2 OR RKAIQ_HAVE_DEHAZE_V3)
add_subdirectory(adehaze)
endif()
if (RKAIQ_HAVE_3DLUT_V1)
add_subdirectory(a3dlut)
endif()
if (RKAIQ_HAVE_BLC_V1)
add_subdirectory(ablc)
endif()
if (RKAIQ_HAVE_CCM_V1)
add_subdirectory(accm)
endif()
add_subdirectory(acgc)
add_subdirectory(adebayer)
add_subdirectory(adpcc)
add_subdirectory(afec)
if (RKAIQ_HAVE_GAMMA_V1 OR RKAIQ_HAVE_GAMMA_V2)
add_subdirectory(agamma)
endif()
if (RKAIQ_HAVE_DEGAMMA_V1)
add_subdirectory(adegamma)
endif()
if (RKAIQ_HAVE_GIC_V1 OR RKAIQ_HAVE_GIC_V2)
add_subdirectory(agic)
endif()
add_subdirectory(aldch)
add_subdirectory(alsc)
if (RKAIQ_HAVE_ORB_V1)
add_subdirectory(aorb)
endif()
add_subdirectory(acsm)
if (RKAIQ_HAVE_WDR_V1)
add_subdirectory(awdr)
endif()
if (RKAIQ_HAVE_SHARP_V3)
add_subdirectory(asharp3)
endif()
if (RKAIQ_HAVE_YNR_V2)
add_subdirectory(aynr2)
endif()
if (RKAIQ_HAVE_CNR_V1)
add_subdirectory(acnr)
endif()
if (RKAIQ_HAVE_BAYERNR_V2)
add_subdirectory(arawnr2)
endif()
if (RKAIQ_HAVE_EIS_V1)
add_subdirectory(aeis)
endif()
if (RKAIQ_HAVE_AMD_V1)
add_subdirectory(amd)
endif()
if (RKAIQ_HAVE_BAYERNR_V1)
add_subdirectory(arawnr)
endif()
if (RKAIQ_HAVE_YNR_V1)
add_subdirectory(aynr)
endif()
if (RKAIQ_HAVE_UVNR_V1)
add_subdirectory(auvnr)
endif()
if (RKAIQ_HAVE_MFNR_V1)
add_subdirectory(amfnr)
endif()
if (RKAIQ_HAVE_GAIN_V1)
add_subdirectory(again)
endif()
if (RKAIQ_HAVE_GAIN_V2)
add_subdirectory(again2)
endif()
if (RKAIQ_HAVE_YNR_V3)
add_subdirectory(aynr3)
endif()
if (RKAIQ_HAVE_CNR_V2)
add_subdirectory(acnr2)
endif()
if (RKAIQ_HAVE_SHARP_V4)
add_subdirectory(asharp4)
endif()
if (RKAIQ_HAVE_BAYER2DNR_V2)
add_subdirectory(abayer2dnr2)
endif()
if (RKAIQ_HAVE_BAYERTNR_V2)
add_subdirectory(abayertnr2)
endif()
if (RKAIQ_HAVE_CAC_V10)
add_subdirectory(acac)
endif()
